--- a/ReactJS/Lec-5_React_Context_API/context-api-concepts/package.json
+++ b/ReactJS/Lec-5_React_Context_API/context-api-concepts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecomm-app",
+  "name": "context-api-concepts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.5.0",
-    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
-    "react-router-dom": "^6.15.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
